# simple_search

./: LICENSE  README.rst  pyproject.toml
simple_search/: __main__.py
tests/: test_simple_search.py
