[tool.poetry]
name = "simple_search"
version = "0.1.0"
description = ""
authors = ["Carlos Gottberg <13184659+el-chogo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
parso = "^0.8.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
